# trocador_sim

./: pyproject.toml
tests/: test_calor.py  test_energia.py  test_escoamento.py  test_hi.py  test_temperatura.py
trocador_sim/: base.py  calor.py  constantes.py  energia.py  escoamento.py  hi.py  temperatura.py
