[tool.poetry]
name = "eli-tcc"
version = "0.1.0"
description = ""
authors = ["Jailciele Gonzaga <gonzagajailciele@gmail.com>"]
packages=[{include="trocador_sim/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
Pint = "^0.19.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0"}
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
